gcc/testsuite/rust/rustc/ui/const-generics/generic_const_exprs/issue-74713.rs
fn bug<'a>()
where
    [(); { // { dg-error ".E0308." "" { target *-*-* } }
        let _: &'a (); // { dg-error "" "" { target *-*-* } }
    }]:
{}

fn main() {}

